Perform native scoring